--- a/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
+++ b/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
@@ -4,9 +4,13 @@
 
 - workflow: overview
 
+- subprocess: register new user
+
 - event: user registered 12:00
 
 - event: login succeeded 13:00
+
+- subprocess: start party
 
 - event: party created 14:00
 
@@ -14,230 +18,5 @@
 
 - event: saldi computed 16:00
 
-# =====================================================
-- workflow: register new user
-
-- action: Alice
-
-- page:
-    - name: PartyApp 12:00
-    - label: Welcome to the parties
-    - label: What's your name?
-    - input: name
-      fill: Alice
-    - button: ok
-      command: get user name 12:01
-
-- policy: PartyApp
-  trigger: 12:01
-
-- query: Alice 12:02
-  result: []
-
-- action: Alice
-
-- page:
-    - name: PartyApp 12:05
-    - label: Welcome Alice
-    - label: You are new to parties
-    - label: We need your email
-    - input: email
-      fill: a@b.de
-    - button: ok
-      command: get email 12:04
-
-- page:
-    - name: PartyApp 12:06
-    - label: Welcome Alice
-    - label: Choose a password
-    - password: password
-      fill: secret
-    - button: ok
-      command: get password 12:07
 
 
-- policy: PartyApp
-  trigger: 12:07
-
-- data: 12:07:01
-  user: Alice
-  name: Alice
-  email: a@b.de
-  password: secret
-
-- event: user registered 12:10
-  name: Alice
-
-- event: login succeeded 12:11
-  name: Alice
-
-- action: Alice
-
-- page:
-    - name: PartyApp 12:11
-    - label: Welcome Alice
-    - label: Choose a party
-    - input: party
-      fill: SE BBQ
-    - button: ok
-      command: get party 12:12
-
-
-# ======================================================
-- workflow: login old user
-
-- page:
-    - name: PartyApp 13:00
-    - label: Welcome to the parties
-    - label: What's your name?
-    - input: name
-      fill: Alice
-    - button: ok
-      command: get user name 13:01
-
-- policy: PartyApp
-  trigger: 13:01
-
-- query: Alice 13:02
-  result: [Alice]
-
-- action: Alice
-
-- page:
-    - name: PartyApp 13:06
-    - label: Welcome Alice
-    - label: Provide a password
-    - password: password
-      fill: secret
-    - button: ok
-      command: get password 13:07
-
-- page:
-    - name: PartyApp 13:11
-    - label: Welcome Alice
-    - label: Choose a party
-    - input: party
-      fill: SE BBQ
-    - button: ok
-      command: get party 13:12
-
-
-# =================================================
-- workflow: start party
-
-- action: Alice
-
-- page:
-    - name: PartyApp 14:00
-    - label: Welcome Alice
-    - label: Choose a party
-    - input: party
-      fill: SE BBQ
-    - input: location
-      fill: Uni
-    - button: ok
-      command: get party 14:01
-
-- policy: PartyApp
-  trigger: 14:01
-
-- data: 14:02
-  Party: sE_BBQ
-  name: SE BBQ
-  location: Uni
-
-- action: Alice
-
-- page:
-    - name: PartyApp 14:10
-    - label: Welcome Alice
-    - label: Let's do the SE BBQ
-    - label: no items yet
-    - button: add
-      command: add item 14:11
-
-- page:
-    - name: PartyApp 14:12
-    - label: Welcome Alice
-    - label: Let's do the SE BBQ
-    - input: item
-      fill: beer
-    - input: price
-      fill: 12.00
-    - input: buyer
-      fill: Bob
-    - button: ok
-      command: build item 14:13
-
-- policy: PartyApp
-  trigger: 14:13
-
-- data: 14:14
-  Item: beer
-  name: beer
-  price: 12.00
-  buyer: sE_BBQ_Bob
-  buyer.back: [items]
-  party: sE_BBQ
-  party.back: [items]
-
-- data: 14:15
-  guest: sE_BBQ_Bob
-  name: Bob
-  party: sE_BBQ
-  party.back: [guests]
-
-- action: Alice
-
-- page:
-    - name: PartyApp 14:20
-    - label: Welcome Alice
-    - label: Let's do the SE BBQ
-    - label: beer 12.00 Bob
-    - button: add
-      command: add item 14:21
-    - label: Total 12.00
-    - label: Share 12.00
-    - label: Bob 0.00
-
-- page:
-    - name: PartyApp 14:22
-    - label: Welcome Alice
-    - label: Let's do the SE BBQ
-    - input: item
-      fill: meat
-    - input: price
-      fill: 21.00
-    - input: buyer
-      fill: Alice
-    - button: ok
-      command: build item 14:23
-
-- policy: PartyApp
-  trigger: 14:23
-
-- data: 14:24
-  Item: meat
-  name: meat
-  price: 21.00
-  buyer: sE_BBQ_Alice
-  party: sE_BBQ
-
-- data: 14:25
-  guest: sE_BBQ_Alice
-  name: Alice
-  party: sE_BBQ
-
-- action: Alice
-
-- page:
-    - name: PartyApp 14:30
-    - label: Welcome Alice
-    - label: Let's do the SE BBQ
-    - label: beer 12.00 Bob
-    - label: meat 21.00 Alice
-    - button: add
-    - label: Total 33.00
-    - label: Share 16.50
-    - label: Bob -4.50
-    - label: Alice +4.50
