--- a/src/main/java/org/fulib/workflows/classModel.yaml
+++ b/src/main/java/org/fulib/workflows/classModel.yaml
@@ -149,14 +149,15 @@
   modified: 	false
   name: 	EventStormingBoard
   propertyStyle: 	Bean
-  roles: 	eventStormingBoard_dataTypes 	eventStormingBoard_eventTypes 	eventStormingBoard_services 	eventStormingBoard_users 	eventStormingBoard_workflows
+  roles: 	eventStormingBoard_dataTypes 	eventStormingBoard_eventTypes 	eventStormingBoard_subprocesses 	eventStormingBoard_services 	eventStormingBoard_users 	eventStormingBoard_workflows
 
 - subprocessNote: 	org.fulib.classmodel.Clazz
-  attributes: 	subprocessNote_subprocessName 	subprocessNote_subprocess
+  attributes: 	subprocessNote_subprocessName 	subprocessNote_kind 	subprocessNote_subprocess
   model: 	c
   modified: 	false
   name: 	SubprocessNote
   propertyStyle: 	Bean
+  roles: 	subprocessNote_eventStormingBoard
   superClass: 	workflowNote
 
 - note: 	org.fulib.classmodel.Clazz
@@ -762,6 +763,18 @@
   propertyStyle: 	Bean
   roleType: 	"java.util.ArrayList<%s>"
 
+- eventStormingBoard_subprocesses: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	eventStormingBoard
+  collectionType: 	c1
+  id: 	EventStormingBoard_subprocesses
+  modified: 	false
+  name: 	subprocesses
+  other: 	subprocessNote_eventStormingBoard
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
 - eventStormingBoard_services: 	org.fulib.classmodel.AssocRole
   aggregation: 	false
   cardinality: 	42
@@ -807,6 +820,15 @@
   type: 	String
   typeSignature: 	String
 
+- subprocessNote_kind: 	org.fulib.classmodel.Attribute
+  clazz: 	subprocessNote
+  id: 	SubprocessNote_kind
+  modified: 	false
+  name: 	kind
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - subprocessNote_subprocess: 	org.fulib.classmodel.Attribute
   clazz: 	subprocessNote
   id: 	SubprocessNote_subprocess
@@ -815,6 +837,16 @@
   propertyStyle: 	Bean
   type: 	Workflow
   typeSignature: 	Workflow
+
+- subprocessNote_eventStormingBoard: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	1
+  clazz: 	subprocessNote
+  id: 	SubprocessNote_eventStormingBoard
+  modified: 	false
+  name: 	eventStormingBoard
+  other: 	eventStormingBoard_subprocesses
+  propertyStyle: 	Bean
 
 - note_map: 	org.fulib.classmodel.Attribute
   clazz: 	note
