--- a/test/src/gen/resources/workflows/StartParty.es.yaml
+++ b/test/src/gen/resources/workflows/StartParty.es.yaml
@@ -18,23 +18,24 @@
 - policy: PartyApp
   trigger: 14:01
 
-- data: 14:02
+- query: sE_BBQ 14:01:01
+  result: []
+
+- data: 14:01:02
   Party: sE_BBQ
   name: SE BBQ
   location: Uni
 
-- action: Alice
-
 - page:
-    - name: PartyApp 14:10
+    - name: PartyApp 14:02
     - label: Welcome Alice
     - label: Let's do the SE BBQ
     - label: no items yet
     - button: add
-      command: add item 14:11
+      command: add item 14:03
 
 - page:
-    - name: PartyApp 14:12
+    - name: PartyApp 14:04
     - label: Welcome Alice
     - label: Let's do the SE BBQ
     - input: item
@@ -44,12 +45,9 @@
     - input: buyer
       fill: Bob
     - button: ok
-      command: build item 14:13
+      command: build item 14:05
 
-- policy: PartyApp
-  trigger: 14:13
-
-- data: 14:14
+- data: 14:05:01
   Item: beer
   name: beer
   price: 12.00
@@ -58,27 +56,25 @@
   party: sE_BBQ
   party.back: [items]
 
-- data: 14:15
+- data: 14:05:02
   guest: sE_BBQ_Bob
   name: Bob
   party: sE_BBQ
   party.back: [guests]
 
-- action: Alice
-
 - page:
-    - name: PartyApp 14:20
+    - name: PartyApp 14:06
     - label: Welcome Alice
     - label: Let's do the SE BBQ
     - label: beer 12.00 Bob
     - button: add
-      command: add item 14:21
+      command: add item 14:07
     - label: Total 12.00
     - label: Share 12.00
     - label: Bob 0.00
 
 - page:
-    - name: PartyApp 14:22
+    - name: PartyApp 14:08
     - label: Welcome Alice
     - label: Let's do the SE BBQ
     - input: item
@@ -88,28 +84,23 @@
     - input: buyer
       fill: Alice
     - button: ok
-      command: build item 14:23
+      command: build item 14:09
 
-- policy: PartyApp
-  trigger: 14:23
-
-- data: 14:24
+- data: 14:09:01
   Item: meat
   name: meat
   price: 21.00
   buyer: sE_BBQ_Alice
   party: sE_BBQ
 
-- data: 14:25
+- data: 14:09:02
   guest: sE_BBQ_Alice
   name: Alice
   expenses: 0.00
   party: sE_BBQ
 
-- action: Alice
-
 - page:
-    - name: PartyApp 14:30
+    - name: PartyApp 14:10
     - label: Welcome Alice
     - label: Let's do the SE BBQ
     - label: beer 12.00 Bob
