starting party migration

--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -605,7 +605,7 @@ catch (Exception e) {
   declaration: 	"private void subscribeAndLoadOldEvents()"
   id: 	StorageService_subscribeAndLoadOldEvents
   methodBody: 	"ServiceSubscribed serviceSubscribed = new ServiceSubscribed()
-      .setServiceUrl(\"http://localhost:42002/apply\");
+      .setServiceUrl(String.format(\"http://localhost:%d/apply\", port));
 String json = Yaml.encode(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
