--- a/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
@@ -41,8 +41,8 @@
 
 - partyAppService: 	org.fulib.classmodel.Clazz
   attributes: 	partyAppService_history 	partyAppService_port 	partyAppService_spark 	partyAppService_model
-  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
+  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import org.fulib.yaml.YamlIdMap;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
+  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import org.fulib.yaml.YamlIdMap;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   methods: 	partyAppService_query 	partyAppService_start 	partyAppService_getHello 	partyAppService_subscribeAndLoadOldEvents 	partyAppService_apply 	partyAppService_getPage 	partyAppService_getDemoPage 	partyAppService_publish 	partyAppService_postApply
   model: 	c
   modified: 	false
@@ -741,8 +741,8 @@ Logger.getGlobal().info(\"PartyApp service is up and running on port \" + port);
   declaration: 	"private String getHello(Request req, Response res)"
   id: 	PartyAppService_getHello
   methodBody: 	"try {
-   String events = Yaml.encode(getHistory().values().toArray());
-   String objects = Yaml.encode(model.getModelMap().values().toArray());
+   String events = Yaml.encodeSimple(getHistory().values().toArray());
+   String objects = Yaml.encodeSimple(model.getModelMap().values().toArray());
    return \"<p id='PartyApp'>This is the PartyApp service. </p>\n\" +
          \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
          \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
@@ -766,8 +766,8 @@ catch (Exception e) {
   declaration: 	"private void subscribeAndLoadOldEvents()"
   id: 	PartyAppService_subscribeAndLoadOldEvents
   methodBody: 	"ServiceSubscribed serviceSubscribed = new ServiceSubscribed()
-      .setServiceUrl(\"http://localhost:42001/apply\");
-String json = Yaml.encode(serviceSubscribed);
+      .setServiceUrl(String.format(\"http://localhost:%d/apply\", port));
+String json = Yaml.encodeSimple(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
    HttpResponse<String> response = Unirest
@@ -775,7 +775,9 @@ try {
          .body(json)
          .asString();
    String body = response.getBody();
-   Map<String, Object> objectMap = Yaml.decode(body);
+   YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+   idMap.decode(body);
+   Map<String, Object> objectMap = idMap.getObjIdMap();
    for (Object obj : objectMap.values()) {
       apply((Event) obj);
    }
@@ -1144,7 +1146,7 @@ return html.toString();"
   clazz: 	partyAppService
   declaration: 	"public void publish(Event event)"
   id: 	PartyAppService_publish
-  methodBody: 	"String json = Yaml.encode(event);
+  methodBody: 	"String json = Yaml.encodeSimple(event);
 
 try {
    HttpResponse<String> response = Unirest
@@ -1169,7 +1171,9 @@ catch (UnirestException e) {
   id: 	PartyAppService_postApply
   methodBody: 	"      try {
          String body = req.body();
-         Map<String, Object> map = Yaml.decode(body);
+         YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+         idMap.decode(body);
+         Map<String, Object> map = idMap.getObjIdMap();
          for (Object value : map.values()) {
             Event event = (Event) value;
             apply(event);
