--- a/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
@@ -41,8 +41,8 @@
 
 - shopService: 	org.fulib.classmodel.Clazz
   attributes: 	shopService_history 	shopService_port 	shopService_spark 	shopService_model
-  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
+  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import org.fulib.yaml.YamlIdMap;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
+  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import org.fulib.yaml.YamlIdMap;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   methods: 	shopService_query 	shopService_start 	shopService_getHello 	shopService_subscribeAndLoadOldEvents 	shopService_apply 	shopService_getPage 	shopService_getDemoPage 	shopService_publish 	shopService_postApply
   model: 	c
   modified: 	false
@@ -619,8 +619,8 @@ Logger.getGlobal().info(\"Shop service is up and running on port \" + port);
   declaration: 	"private String getHello(Request req, Response res)"
   id: 	ShopService_getHello
   methodBody: 	"try {
-   String events = Yaml.encode(getHistory().values().toArray());
-   String objects = Yaml.encode(model.getModelMap().values().toArray());
+   String events = Yaml.encodeSimple(getHistory().values().toArray());
+   String objects = Yaml.encodeSimple(model.getModelMap().values().toArray());
    return \"<p id='Shop'>This is the Shop service. </p>\n\" +
          \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
          \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
@@ -645,7 +645,7 @@ catch (Exception e) {
   id: 	ShopService_subscribeAndLoadOldEvents
   methodBody: 	"ServiceSubscribed serviceSubscribed = new ServiceSubscribed()
       .setServiceUrl(String.format(\"http://localhost:%d/apply\", port));
-String json = Yaml.encode(serviceSubscribed);
+String json = Yaml.encodeSimple(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
    HttpResponse<String> response = Unirest
@@ -653,7 +653,9 @@ try {
          .body(json)
          .asString();
    String body = response.getBody();
-   Map<String, Object> objectMap = Yaml.decode(body);
+   YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+   idMap.decode(body);
+   Map<String, Object> objectMap = idMap.getObjIdMap();
    for (Object obj : objectMap.values()) {
       apply((Event) obj);
    }
@@ -777,7 +779,7 @@ return html.toString();"
   clazz: 	shopService
   declaration: 	"public void publish(Event event)"
   id: 	ShopService_publish
-  methodBody: 	"String json = Yaml.encode(event);
+  methodBody: 	"String json = Yaml.encodeSimple(event);
 
 try {
    HttpResponse<String> response = Unirest
@@ -802,7 +804,9 @@ catch (UnirestException e) {
   id: 	ShopService_postApply
   methodBody: 	"      try {
          String body = req.body();
-         Map<String, Object> map = Yaml.decode(body);
+         YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
+         idMap.decode(body);
+         Map<String, Object> map = idMap.getObjIdMap();
          for (Object value : map.values()) {
             Event event = (Event) value;
             apply(event);
