--- a/test/src/main/java/uks/debuggen/party2/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party2/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	dataEvent 	dataGroup 	query 	serviceSubscribed 	command 	userRegisteredEvent 	loginSucceededEvent 	partyCreatedEvent 	itemBookedEvent 	saldiComputedEvent 	checkNameCommand 	checkEmailCommand 	checkPasswordCommand 	userBuilt 	checkPartyCommand 	getPartyCommand 	partyBuilt 	addItemCommand 	buildItemCommand 	itemBuilt 	guestBuilt
+  classes: 	event 	dataEvent 	dataGroup 	query 	serviceSubscribed 	command 	userRegisteredEvent 	loginSucceededEvent 	partyCreatedEvent 	itemBookedEvent 	saldiComputedEvent 	checkNameCommand 	checkEmailCommand 	checkPasswordCommand 	userBuilt 	checkPartyCommand 	getPartyCommand 	getRegionCommand 	regionBuilt 	partyBuilt 	party2Built 	addItemCommand 	buildItemCommand 	itemBuilt 	guestBuilt
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -22,7 +22,7 @@
   name: 	DataEvent
   propertyStyle: 	Bean
   roles: 	dataEvent_sagas 	dataEvent_query
-  subClasses: 	dataGroup 	userBuilt 	partyBuilt 	itemBuilt 	guestBuilt
+  subClasses: 	dataGroup 	userBuilt 	regionBuilt 	partyBuilt 	party2Built 	itemBuilt 	guestBuilt
   superClass: 	event
 
 - dataGroup: 	org.fulib.classmodel.Clazz
@@ -55,7 +55,7 @@
   modified: 	false
   name: 	Command
   propertyStyle: 	Bean
-  subClasses: 	checkNameCommand 	checkEmailCommand 	checkPasswordCommand 	checkPartyCommand 	getPartyCommand 	addItemCommand 	buildItemCommand
+  subClasses: 	checkNameCommand 	checkEmailCommand 	checkPasswordCommand 	checkPartyCommand 	getPartyCommand 	getRegionCommand 	addItemCommand 	buildItemCommand
   superClass: 	event
 
 - userRegisteredEvent: 	org.fulib.classmodel.Clazz
@@ -142,11 +142,34 @@
   propertyStyle: 	Bean
   superClass: 	command
 
+- getRegionCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	getRegionCommand_region
+  model: 	c
+  modified: 	false
+  name: 	GetRegionCommand
+  propertyStyle: 	Bean
+  superClass: 	command
+
+- regionBuilt: 	org.fulib.classmodel.Clazz
+  model: 	c
+  modified: 	false
+  name: 	RegionBuilt
+  propertyStyle: 	Bean
+  superClass: 	dataEvent
+
 - partyBuilt: 	org.fulib.classmodel.Clazz
   attributes: 	partyBuilt_name 	partyBuilt_location
   model: 	c
   modified: 	false
   name: 	PartyBuilt
+  propertyStyle: 	Bean
+  superClass: 	dataEvent
+
+- party2Built: 	org.fulib.classmodel.Clazz
+  attributes: 	party2Built_name 	party2Built_region 	party2Built_address
+  model: 	c
+  modified: 	false
+  name: 	Party2Built
   propertyStyle: 	Bean
   superClass: 	dataEvent
 
@@ -360,6 +383,15 @@
   type: 	String
   typeSignature: 	String
 
+- getRegionCommand_region: 	org.fulib.classmodel.Attribute
+  clazz: 	getRegionCommand
+  id: 	GetRegionCommand_region
+  modified: 	false
+  name: 	region
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - partyBuilt_name: 	org.fulib.classmodel.Attribute
   clazz: 	partyBuilt
   id: 	PartyBuilt_name
@@ -374,6 +406,33 @@
   id: 	PartyBuilt_location
   modified: 	false
   name: 	location
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- party2Built_name: 	org.fulib.classmodel.Attribute
+  clazz: 	party2Built
+  id: 	Party2Built_name
+  modified: 	false
+  name: 	name
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- party2Built_region: 	org.fulib.classmodel.Attribute
+  clazz: 	party2Built
+  id: 	Party2Built_region
+  modified: 	false
+  name: 	region
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- party2Built_address: 	org.fulib.classmodel.Attribute
+  clazz: 	party2Built
+  id: 	Party2Built_address
+  modified: 	false
+  name: 	address
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
