--- a/test/src/test/java/uks/debuggen/party2/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party2/classModel.yaml
@@ -196,6 +196,23 @@ pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_05:\"));
 
 // workflow StartParty
+// page 13:55
+open(\"http://localhost:42001/page/13_55\");
+$(\"#region\").setValue(\"Kassel\");
+$(\"#ok\").click();
+
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_56:\"));
+
+// check PartyApp
+open(\"http://localhost:42001\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_56:\"));
+// check data note 13:56:02
+pre = $(\"#data\");
+pre.shouldHave(text(\"- Kassel:\"));
+
 // page 14:00
 open(\"http://localhost:42001/page/14_00\");
 $(\"#party\").setValue(\"SE BBQ\");
@@ -215,6 +232,13 @@ pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
 pre.shouldHave(matchText(\"name:.*\\"SE BBQ\\"\"));
 pre.shouldHave(matchText(\"location:.*Uni\"));
+pre.shouldHave(matchText(\"@migratedTo:.*Party2\"));
+// check data note 14:01:03
+pre = $(\"#data\");
+pre.shouldHave(text(\"- sE_BBQ:\"));
+pre.shouldHave(matchText(\"name:.*\\"SE BBQ\\"\"));
+pre.shouldHave(matchText(\"region:.*Kassel\"));
+pre.shouldHave(matchText(\"address:.*Uni\"));
 
 // page 14:02
 open(\"http://localhost:42001/page/14_02\");
