--- a/test/src/main/java/uks/debuggen/party2/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party2/PartyApp/classModel.yaml
@@ -922,6 +922,7 @@ businessLogic.initEventHandlerMap();
 Consumer<Event> handler = businessLogic.getHandler(event);
 handler.accept(event);
 history.put(event.getId(), event);
+firePropertyChange(PROPERTY_HISTORY, null, event);
 publish(event);"
   modified: 	false
   modifiers: 	public
@@ -1309,8 +1310,8 @@ catch (UnirestException e) {
   clazz: 	partyAppService
   declaration: 	"private String postApply(Request req, Response res)"
   id: 	PartyAppService_postApply
-  methodBody: 	"      try {
-         String body = req.body();
+  methodBody: 	"      String body = req.body();
+      try {
          YamlIdMap idMap = new YamlIdMap(Event.class.getPackageName());
          idMap.decode(body);
          Map<String, Object> map = idMap.getObjIdMap();
@@ -1320,7 +1321,13 @@ catch (UnirestException e) {
          }
       }
       catch (Exception e) {
-         Logger.getGlobal().log(Level.SEVERE, \"postApply failed\", e);
+         String message = e.getMessage();
+         if (message.contains(\"ReflectorMap could not find class description\")) {
+            Logger.getGlobal().info(\"post apply ignores unknown event \" + body);
+         }
+         else {
+            Logger.getGlobal().log(Level.SEVERE, \"postApply failed\", e);
+         }
       }
       return \"apply done\";"
   modified: 	false
